# casper-stake-contract

./: .gitignore  Cargo.toml  Makefile  README.md
server/: index.js  package.json  stake.wasm  test.js
stake/: Cargo.toml
stake/src/: enums.rs  error.rs  lib.rs  stake.rs  stake.txt  utils.rs
stake/src/interfaces/: cep18.rs  mod.rs
