[package]
name = "stake"
version = "0.1.0"
edition = "2018"

[dependencies]
casper-contract = { version = "1.4.4", features = ["test-support"] }
casper-types = "1.5.0"
casper_types_derive = "0.1.0"
tiny-keccak = { version = "2.0", features = ["sha3"] }
base64 = { version = "0.20.0", default-features = false, features = ["alloc"] }

[[bin]]
name = "stake"
path = "src/lib.rs"
bench = false
doctest = false
test = false